# agility-ai

./: .env-example  .gitignore  README.md  api.py  cli.py  config.py  pyproject.toml  requirements.txt  run.py  voice.py
api/: __init__.py  routes.py  schemas.py
database/: __init__.py  models.py
interfaces/: api.py  cli.py  voice.py
llm/: chat.py  memory.py
llm/modules/: __init__.py  huggingface_module.py  openai_module.py
utils/: __init__.py  stt.py  tts.py
